--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,7 @@ body {
   line-height: 22px;
   font-family: "Roboto", Arial, sans-serif;
   color: #ffffff;
+  background-color: #849d8f;
 
 }
 .site-wrapper {
@@ -142,7 +143,6 @@ button {
   border-radius: 30px;
 }
 .menu-item {
-  position: relative;
   margin-bottom: 9px;
 }
 .menu-link span {
@@ -174,8 +174,8 @@ button {
   position: absolute;
   width: 143px;
   display: none;
-  top: 32px;
-  left: -7px;
+  top: 51px;
+  left: -6px;
   list-style: none;
 
   background-color: #f8f7f4;
@@ -183,7 +183,9 @@ button {
   -webkit-box-shadow: 0 5px 20px 0 rgba(0, 0, 0, 0.4);
           box-shadow: 0 5px 20px 0 rgba(0, 0, 0, 0.4);
 }
-
+.popup-menu-item {
+  padding-top: 0;
+}
 .popup-menu-item a {
   display: block;
   height: 100%;
@@ -720,6 +722,7 @@ button {
 .hits-item a,
 .catalog-item a {
   text-decoration: none;
+  position: relative;
 }
 .catalog-image {
   position: relative;
@@ -729,7 +732,9 @@ button {
 }
 .catalog-price {
   position: absolute;
-  top: 205px;
+      top: 210px;
+      z-index: 1;
+      left: 0;
 }
 .catalog-price .price-val {
   font-weight: 700;
@@ -1338,12 +1343,13 @@ button {
   -ms-flex-pack: justify;
 }
 .nav-container {
+  width: 382px;
+  position: relative;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  flex-wrap: wrap;
   justify-content: space-between;
-  width: 560px;
-  margin-right: 160px;
   -webkit-box-pack: justify;
   -ms-flex-pack: justify;
 }
@@ -1382,6 +1388,7 @@ button {
   width: 267px;
   padding-right: 1px;
   padding-bottom: 11px;
+  margin-left: 342px;
 
   -webkit-box-align: center;
   -ms-flex-align: center;
@@ -1539,7 +1546,7 @@ position: relative;
   justify-content: space-between;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
-  margin: 41px auto;
+  margin: 41px auto 0;
 
   -webkit-box-pack: justify;
   -ms-flex-pack: justify;
@@ -1650,7 +1657,7 @@ position: relative;
 .catalog-block {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
-  margin: 40px auto 0 ;
+  margin: 40px auto 0;
   position: relative;
 }
 .hits-list,
@@ -1673,7 +1680,6 @@ position: relative;
 }
 .hits-item,
 .catalog-item {
-  width: 266px;
 }
 .catalog-item {
   margin-bottom: 40px;
@@ -1881,17 +1887,27 @@ position: relative;
   -webkit-box-pack: end;
   -ms-flex-pack: end;
 }
+.catalog-item-inner img {
+width: 267px;
+height: 267px;
+}
+.catalog-item-inner {
+
+
+}
 
 .catalog-item-inner:hover {
-  position: absolute;
+  position: relative;
   height: 406px;
-  padding: 5px 10px 0 13px;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
-  border-radius: 5px;
-  background-color: rgba(248, 247, 244, 0.2);
   width: 293px;
-  z-index: 1;
+  top: -7px;
+  left: -13px;
+  padding: 7px 13px 0px 13px;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+  border-radius: 5px;
+  z-index: 2;
+  background-color: rgba(248, 247, 244, 0.2);
 }
 
 .catalog-item-inner:hover .catalog-invisible-button{
@@ -1899,8 +1915,4 @@ position: relative;
   margin-top: 18px;
   margin-left: 24px;
   padding-top: 10px;
-}
-}
-}}
-
 }
