--- a/css/style.css
+++ b/css/style.css
@@ -9,10 +9,14 @@ body {
   line-height: 22px;
   font-family: "Roboto", Arial, sans-serif;
   color: #ffffff;
+
+}
+.body-catalog {
   background-color: #849d8f;
 
 }
 .site-wrapper {
+
   background-color: #849d8f;
 
 }
@@ -112,7 +116,7 @@ button {
   display: flex;
   justify-content: space-between;
   align-items: center;
-
+  flex-wrap: wrap;
   list-style: none;
 
   -webkit-box-align: center;
@@ -158,6 +162,7 @@ button {
 
 .menu-item:hover .popup-menu-list {
   display: block;
+
 }
 .menu-item:not(:first-child) {
   margin-bottom: 11px;
@@ -177,7 +182,6 @@ button {
   top: 51px;
   left: -6px;
   list-style: none;
-
   background-color: #f8f7f4;
   border-radius: 5px;
   -webkit-box-shadow: 0 5px 20px 0 rgba(0, 0, 0, 0.4);
@@ -297,16 +301,12 @@ button {
 .search-form-wrap {
   position: absolute;
   z-index: 1;
-
   display: none;
-  width: 327px;
-  padding: 20px;
-  padding: 20px 0 20px 15px;
-
+  padding: 20px 15px 20px 15px;
   background-color: #f8f7f4;
   border-radius: 6px;
   -webkit-box-shadow: 0 20px 20px 0 rgba(0, 0, 0, 0.4);
-          box-shadow: 0 20px 20px 0 rgba(0, 0, 0, 0.4);
+  box-shadow: 0 20px 20px 0 rgba(0, 0, 0, 0.4);
 }
 
 
@@ -726,6 +726,18 @@ button {
 }
 .catalog-image {
   position: relative;
+}
+.hits-img::before {
+  content: "";
+  position: absolute;
+  top: -1px;
+  left: 1px;
+  display: block;
+  width: 61px;
+  height: 61px;
+  background-image: url(../img/hit.svg);
+  background-position: center;
+  background-repeat: no-repeat;
 }
 .catalog-image img {
   border-radius: 50%;
@@ -1489,12 +1501,10 @@ position: relative;
 }
 .switch-modify:nth-child(2)::before {
   margin-left: 5px;
-  margin-bottom: 2px;
 }
 
 .switch-modify:nth-child(3)::before {
   margin-left: 5px;
-  margin-bottom: 2px;
 }
 
 .radio-slide:checked ~ .switch-modify::before {
@@ -1504,23 +1514,21 @@ position: relative;
   background-color: #849d8f;
   background-image: url(../img/ice-cream-main1.png);
   background-repeat: no-repeat;
-  background-position: 309px -8px;
-
-
+  background-position: center -8px;
 }
 .radio-slide[id="switch2"]:checked ~ .site-wrapper {
   background-color: #8996a6;
   background-image: url(../img/ice-cream-main2.png);
   background-repeat: no-repeat;
-  background-position: 309px -8px;
+  background-position: center -8px;
 }
 .radio-slide[id="switch3"]:checked ~ .site-wrapper {
   background-color: #9d8b84;
   background-image: url(../img/ice-cream-main3.png);
   background-repeat: no-repeat;
-  background-position: 309px -8px;
+  background-position: center -8px;
 }
-
+.site-wrapper
 .radio-slide[id="switch1"]:checked ~ .site-wrapper label[for="switch1"]::before,
 .radio-slide[id="switch2"]:checked ~ .site-wrapper label[for="switch2"]::before,
 .radio-slide[id="switch3"]:checked ~ .site-wrapper label[for="switch3"]::before {
@@ -1680,6 +1688,8 @@ position: relative;
 }
 .hits-item,
 .catalog-item {
+  width: 267px;
+  position: relative;
 }
 .catalog-item {
   margin-bottom: 40px;
@@ -1691,7 +1701,6 @@ position: relative;
   margin: 32px auto 0;
   padding: 25px 0 23px 21px;
   background-image: url(../img/index-wafers.jpg);
-  background-repeat: no-repeat;
   background-position: 50% 50%;
   border-radius: 15px;
 }
@@ -1712,6 +1721,7 @@ position: relative;
   -ms-flex-wrap: wrap;
 }
 .seo-item {
+  position: relative;
   width: 477px;
   padding-left: 0px;
   margin-top: 21px;
@@ -1730,6 +1740,31 @@ position: relative;
   margin: 0;
   padding: 0;
 }
+.seo-item::before {
+  content: "";
+  position: absolute;
+  display: block;
+  top: -13px;
+  left: -58px;
+  width: 49px;
+  height: 49px;
+  background-position: center;
+}
+.seo-item:first-child::before{
+  background-image: url(../img/ice-cream.svg);
+}
+.seo-item:nth-child(2)::before{
+  background-image: url(../img/cow.svg);
+}
+.seo-item:nth-child(3)::before{
+  background-image: url(../img/eco.svg);
+}
+.seo-item:last-child::before{
+  background-image: url(../img/thermometer.svg);
+}
+
+
+
 .news-block {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -1763,7 +1798,6 @@ position: relative;
   padding: 5px 5px 5px 6px;
 
   background-image: url(../img/bg-post.svg);
-  background-repeat: no-repeat;
   background-position: center;
 }
 .news-container-left {
@@ -1799,11 +1833,10 @@ position: relative;
   margin-top: 40px;
 
 }
-.mapcart {
-  background-image: url(../img/maps.jpg);
+/*  background-image: url(../img/maps.jpg);
   background-repeat: no-repeat;
   background-position: center;
-}
+}*/
 
 .footer-wrap {
   display: -webkit-box;
@@ -1835,6 +1868,7 @@ position: relative;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  flex-wrap: wrap;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
   width: 313px;
@@ -1897,7 +1931,7 @@ height: 267px;
 }
 
 .catalog-item-inner:hover {
-  position: relative;
+  position: absolute;
   height: 406px;
   width: 293px;
   top: -7px;
