--- a/css/style.css
+++ b/css/style.css
@@ -4,12 +4,17 @@ html { -webkit-box-sizing: border-box; box-sizing: border-box; }
 body {
   margin: 0;
   padding: 0;
-
   font-size: 16px;
   line-height: 22px;
   font-family: "Roboto", Arial, sans-serif;
   color: #ffffff;
 
+}
+.slide.container {
+  font-size: 16px;
+  line-height: 22px;
+  font-family: "Roboto", Arial, sans-serif;
+  color: #ffffff;
 }
 .body-catalog {
   background-color: #849d8f;
@@ -60,11 +65,11 @@ button {
 }
 .header-logo {
   margin: 0;
-  margin-right: 3px;
+  margin-right: 5px;
   padding: 0;
 }
 .btn {
-  font-family: inherit;
+  font-family: "Roboto", Arial, sans-serif;
   color: #fefefe;
   background: -webkit-gradient(linear, left bottom, left top, from(#e74a35), to(#f26843));
   background: linear-gradient(0deg, #e74a35 0%, #f26843 100%);
@@ -73,7 +78,7 @@ button {
   cursor: pointer;
 }
 .btn:hover {
-  font-family: inherit;
+  font-family: "Roboto", Arial, sans-serif;
   color: #fefefe;
 
   background: #f17b64;
@@ -82,7 +87,7 @@ button {
 }
 
 .btn:active {
-  font-family: inherit;
+  font-family: "Roboto", Arial, sans-serif;
   color: #fefefe;
   background: -webkit-gradient(linear, left bottom, left top, from(#e74a35), to(#f26843));
   background: linear-gradient(0deg, #e74a35 0%, #f26843 100%);
@@ -107,7 +112,7 @@ button {
   font-weight: 700;
   font-size: 16px;
   line-height: 24px;
-  font-family: Roboto;
+  font-family: "Roboto", Arial, sans-serif;
   color: #323232;
 }
 .menu-list {
@@ -131,7 +136,7 @@ button {
   font-weight: 700;
   font-size: 16px;
   line-height: 18px;
-  font-family: Roboto;
+  font-family: "Roboto", Arial, sans-serif;
   color: #ffffff;
   text-decoration: none;
 
@@ -166,7 +171,7 @@ button {
 }
 .menu-item:not(:first-child) {
   margin-bottom: 11px;
-  margin-left: 4px;
+margin-left: 4px;
 }
 .menu-item:nth-child(3) {
   margin-left: 3px;
@@ -199,7 +204,7 @@ button {
   font-weight: 400;
   font-size: 14px;
   line-height: 16px;
-  font-family: Roboto;
+  font-family: "Roboto", Arial, sans-serif;
   color: #333333;
   text-decoration: none;
 }
@@ -213,7 +218,7 @@ button {
   font-weight: 700;
   font-size: 14px;
   line-height: 17px;
-  font-family: Roboto;
+  font-family: "Roboto", Arial, sans-serif;
   color: #333333;
   text-decoration: none;
 }
@@ -327,7 +332,7 @@ button {
   font-weight: 400;
   font-size: 14px;
   line-height: 24px;
-  font-family: Roboto;
+  font-family: "Roboto", Arial, sans-serif;
   text-align: left;
   color: #999999;
 
@@ -401,7 +406,8 @@ button {
   font-weight: 400;
   font-size: 14px;
   line-height: 24px;
-  font-family: Roboto;
+  font-family: "Roboto", Arial, sans-serif;
+
   text-align: left;
   color: #999999;
 
@@ -420,7 +426,7 @@ button {
   font-weight: 400;
   font-size: 14px;
   line-height: 24px;
-  font-family: Roboto;
+  font-family: "Roboto", Arial, sans-serif;
   text-align: left;
   color: #999999;
 
@@ -542,7 +548,7 @@ button {
   font-weight: 700;
   font-size: 18px;
   line-height: 24px;
-  font-family: inherit;
+  font-family: "Roboto", Arial, sans-serif;
   color: #fefefe;
   color: #fefefe;
   background: -webkit-gradient(linear, left bottom, left top, from(#e74a35), to(#f26843));
@@ -566,7 +572,7 @@ button {
   font-weight: 500;
   font-size: 14px;
   line-height: 16px;
-  font-family: "Roboto";
+  font-family: "Roboto", Arial, sans-serif;
   color: #ffffff;
 }
 .shipcart-link:hover {
@@ -654,7 +660,7 @@ button {
   font-weight: 400;
   font-size: 14px;
   line-height: 16px;
-  font-family: Roboto;
+  font-family: "Roboto", Arial, sans-serif;
   text-align: left;
   color: #ffffff;
   text-decoration: none;
@@ -664,7 +670,7 @@ button {
   font-weight: 700;
   font-size: 60px;
   line-height: 60.821px;
-  font-family: Roboto;
+  font-family: "Roboto", Arial, sans-serif;
   text-align: center;
   color: #ffffff;
 }
@@ -775,7 +781,7 @@ button {
   color: #ffffff;
 }
 .product-foo {
-  width: 251px;
+  width: 267x;
   margin: 6px auto;
 
   text-align: center;
@@ -859,59 +865,79 @@ button {
   font-weight: 700;
   font-size: 18px;
   border-radius: 30px;
-  font-family: "Roboto";
+  font-family: "Roboto", Arial, sans-serif;
   margin-left: 7px;
 }
 .address-block {
   position: absolute;
   top: 62px;
-  right: 0;
   bottom: 0;
-  left: 872px;
-
+  left: 1105px;
   -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
   width: 302px;
   height: 305px;
-  padding-top: 22px;
+  padding-top: 29px;
   padding-right: 25px;
-  padding-bottom: 24px;
+  padding-bottom: 11px;
   padding-left: 25px;
-
   background-color: rgba(255, 255, 255, 0.98);
   border-radius: 15px;
 }
 .address-content {
+  width: 157px;
   font-weight: 400;
   font-size: 14px;
   line-height: 20px;
   text-align: left;
   color: rgb(50, 50, 50);
+  margin: 0;
+  padding: 0;
 }
-.address-content b {
-  font-weight: bold;
-  font-size: 18px;
-  line-height: 1.333;
+.address-content-tel{
+  width: 173px;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 20px;
   text-align: left;
   color: rgb(50, 50, 50);
+  margin: 0;
+  padding: 0;
+  margin-top: 14px;
+}
+
+.address-item p:nth-child(2) {
+  font-weight: bold;
+  font-size: 18px;
+  line-height: 26px;
+  text-align: left;
+  color: rgb(50, 50, 50);
+  margin: 0;
+  padding: 0;
+}
+.address-number {
+  display: inline-block;
+  font-size: 18px;
+  font-weight: 700;
+  margin-top: 7px;
 }
 .callback-button {
   display: -webkit-box;
   display: -ms-flexbox;
+  margin-top: 26px;
   display: flex;
   justify-content: center;
   align-items: center;
   width: 252px;
   height: 44px;
-
   text-decoration: none;
-
   border-radius: 30px;
-
   -webkit-box-align: center;
+  font-size: 18px;
   -webkit-box-pack: center;
   -ms-flex-align: center;
   -ms-flex-pack: center;
+  line-height: 24px
 }
 .social-item img {
   border: 2px solid rgba(255, 255, 255, 0.5);
@@ -923,11 +949,23 @@ button {
   display: flex;
   justify-content: center;
   align-items: center;
-
+  height: 38px;
+  width: 38px;
+  border: 3px solid #dae2de;
+  border-radius: 50%;
   -webkit-box-align: center;
   -webkit-box-pack: center;
   -ms-flex-align: center;
   -ms-flex-pack: center;
+}
+.social-item path {
+  fill: #e6ebe9;
+}
+.social-item:hover path {
+  fill: #ffffff;
+}
+.social-item:active path {
+  fill: #e9e9e9;
 }
 .footer-menu a {
   font-weight: 400;
@@ -938,6 +976,10 @@ button {
 }
 .footer-menu a:first-of-type {
   font-weight: 700;
+  margin-right: 31px;
+}
+.footer-menu a:nth-child(3) {
+  margin-right: 44px;
 }
 .footer-banner p {
   font-weight: 400;
@@ -945,6 +987,8 @@ button {
   line-height: 18px;
   text-align: left;
   color: #fefefe;
+  margin: 0;
+  padding: 0;
 }
 .footer-banner a {
   color: #ffffff;
@@ -974,7 +1018,7 @@ button {
   font-weight: 400;
   font-size: 16px;
   line-height: 24px;
-  font-family: Roboto;
+  font-family: "Roboto", Arial, sans-serif;
   text-align: left;
   color: #999999;
 
@@ -993,7 +1037,7 @@ button {
   font-weight: 400;
   font-size: 16px;
   line-height: 24px;
-  font-family: Roboto;
+  font-family: "Roboto", Arial, sans-serif;
   text-align: left;
   color: #999999;
 
@@ -1012,7 +1056,7 @@ button {
   font-weight: 400;
   font-size: 16px;
   line-height: 24px;
-  font-family: Roboto;
+  font-family: "Roboto", Arial, sans-serif;
   text-align: left;
   color: #999999;
 
@@ -1046,7 +1090,7 @@ button {
   font-weight: 500;
   font-size: 14px;
   line-height: 16px;
-  font-family: Roboto;
+  font-family: "Roboto", Arial, sans-serif;
   text-align: left;
   color: #ffffff;
 
@@ -1064,7 +1108,7 @@ button {
 
   font-size: 16px;
   line-height: 18px;
-  font-family: Roboto;
+  font-family: "Roboto", Arial, sans-serif;
   text-align: left;
   color: #ffffff;
 
@@ -1096,7 +1140,7 @@ button {
   font-weight: 500;
   font-size: 16px;
   line-height: 18px;
-  font-family: Roboto;
+  font-family: "Roboto", Arial, sans-serif;
   color: #ffffff;
 
   background-color: rgba(255, 255, 255, 0.19);
@@ -1206,7 +1250,7 @@ button {
 .filter-form {
   font-size: 14px;
   line-height: 1.143;
-  font-family: "Roboto";
+  font-family: "Roboto", Arial, sans-serif;
   text-align: left;
   color: rgb( 255, 255, 255 );
 }
@@ -1215,7 +1259,7 @@ button {
 
   font-size: 14px;
   line-height: 1.143;
-  font-family: "Roboto";
+  font-family: "Roboto", Arial, sans-serif;
   text-align: left;
   color: rgb( 255, 255, 255 );
 }
@@ -1255,7 +1299,7 @@ button {
   font-weight: 500;
   font-size: 16px;
   line-height: 18px;
-  font-family: Roboto;
+  font-family: "Roboto", Arial, sans-serif;
   color: #ffffff;
 
   -webkit-box-align: center;
@@ -1331,7 +1375,7 @@ button {
   font-weight: 500;
   font-size: 16px;
   line-height: 18px;
-  font-family: Roboto;
+  font-family: "Roboto", Arial, sans-serif;
   color: #ffffff;
 
   -webkit-box-align: center;
@@ -1466,9 +1510,10 @@ position: relative;
   position: absolute;
   display: block;
   top: -9px;
+  color: #ffffff;
   left: 309px;
   font-size: 60.468px;
-    font-family: "Roboto";
+  font-family: "Roboto", Arial, sans-serif;
   font-weight: bold;
     line-height: 1.006;
   margin: 0;
@@ -1506,7 +1551,10 @@ position: relative;
 .switch-modify:nth-child(3)::before {
   margin-left: 5px;
 }
+.radio-slide:checked ~ .switch-modify:first-child::before {
+  background-color: #8996a6;
 
+}
 .radio-slide:checked ~ .switch-modify::before {
   background-color: #8996a6;
 }
@@ -1571,7 +1619,7 @@ position: relative;
           box-sizing: border-box;
   margin: 23px 0 0 0;
   padding: 0 6px 0 3px;
-  font-family: "Roboto";
+  font-family: "Roboto", Arial, sans-serif;
   font-size: 100%;
   font-weight: 700;
   vertical-align: baseline;
@@ -1755,12 +1803,16 @@ position: relative;
 }
 .seo-item:nth-child(2)::before{
   background-image: url(../img/cow.svg);
+  top: -13px;
+  left: -60px;
 }
 .seo-item:nth-child(3)::before{
   background-image: url(../img/eco.svg);
 }
 .seo-item:last-child::before{
   background-image: url(../img/thermometer.svg);
+  top: -13px;
+  left: -60px;
 }
 
 
@@ -1819,9 +1871,9 @@ position: relative;
 }
 .subscribe-input {
   padding: 11px 0 11px 13px;
-      width: 368px;
-      border-radius: 5px;
-      font-family: "Roboto";
+  width: 368px;
+  border-radius: 5px;
+  font-family: "Roboto", Arial, sans-serif;
 }
 .subscribe-form {
   margin-top: 36px;
@@ -1842,21 +1894,16 @@ position: relative;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  justify-content: space-between;
-  align-items: center;
-  -webkit-box-sizing: border-box;
+
           box-sizing: border-box;
   width: 1200px;
-  margin: 20px auto;
-  padding: 0 27px;
-
-  -webkit-box-align: center;
-  -webkit-box-pack: justify;
-  -ms-flex-align: center;
-  -ms-flex-pack: justify;
+  margin: 0 auto;
+  margin-top: 12px;
+  padding: 0 25px 22px 27px;
 }
 .footer-social {
   width: 267px;
+    padding-top: 18px;
 }
 
 .social-list {
@@ -1864,17 +1911,29 @@ position: relative;
   display: -ms-flexbox;
   display: flex;
 }
+.social-item {
+margin-right: 12px;
+}
 .footer-menu {
+  width: 560px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  align-items: center;
   flex-wrap: wrap;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
-  width: 313px;
+          margin: 0 auto;
+          padding-right: 80px;
+              padding-left: 139px;
+              padding-top: 3px;
+              align-content: center;
+
 }
 .footer-banner {
-  width: 200px;
+  width: 267px;
+  margin-left: auto;
+  padding-left: 77px;
 }
 /*  Catalog   */
 .main-container-catalog {
