--- a/css/style.css
+++ b/css/style.css
@@ -1074,16 +1074,26 @@ button {
 }
 .popup-callback {
   position: fixed;
-  top: 329px;
-  right: 589px;
-
   display: none;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.6);
+  top: 0;
+  left: 0;
+  z-index: 666;
+
+}
+.popup-callback-window {
+  position: relative;
+  margin: 50px auto;
   width: 478px;
-  height: 443px;
   padding: 17px 23px 18px 24px;
 
   background-color: #f8f7f4;
-  border-radius: 10px;  ;
+  border-radius: 10px;
+}
+.popup-callback-show {
+  display: block;
 }
 
 .popup-callback p {
@@ -1183,45 +1193,21 @@ button {
 }
 .callback-button-close {
   position: absolute;
-  top: 15px;
+  top: 24px;
   right: 15px;
-
   margin: 0;
   padding: 0;
 }
 
 .button-close {
   position: relative;
-
+  display: block;
   width: 18px;
   height: 18px;
 
   background: none;
 }
-.button-close::after {
-  content: "";
-  position: relative;
-  top: -2px;
 
-  display: block;
-  height: 2px;
-
-  background-color: black;
-  -webkit-transform: rotate(-45deg);
-          transform: rotate(-45deg);
-}
-.button-close::before {
-  content: "";
-  position: relative;
-  top: 0;
-
-  display: block;
-  height: 2px;
-
-  background-color: black;
-  -webkit-transform: rotate(45deg);
-          transform: rotate(45deg);
-}
 .filters-header {
   margin: 0;
   padding: 0;
